# technoDev

./: README.md  files_names_functions.R  main.R  variables of problem.R
0 functions/: files_names_functions.R  load_functions.R
0 functions/MCUAMS/: CMakeLists.txt  reward_test.csv
0 functions/MCUAMS/src/: CSVParser.h  MDP.h  main.cpp
1 Markov chain business as usual/: Markov chain estimation.R
2 initial belief benefits deployment/: 4 profiles AM strategy figure.R  4 profiles heatmap give up figure.R  4 profiles heatmap give up.R  GBR AM strategy + trajectory + figure analytical.R  GBR AM strategy + trajectory + figures.R  GBR heatmap + expected AM + strategy + figures analytical.R  GBR heatmap + expected AM + strategy + figures.R  GBR heatmap give up+expected values analytical.R  GBR heatmap give up+expected values.R  trajectories.R
3 degradation recovery profiles/: 4 profiles.R  general profiles.R  profiles def figure.R
4 initial belief feasibility and costs/: graph maxTime analytical solution.R  graph maxTime analytical.R  graph maxTime figure paper.R  graph maxTime.R  heatmap do nothing on give up analytical solution.R  heatmap do nothing on give up figure paper analytical solution.R
5 Tmax vs Rdeploy/: Tmax vs rdeploy.R
6 insights analytical/: analytical vs numerical Tmax.R  trade off.R
MCUAMS/: example.txt  example2.txt  mean_parameters.R
MDP/: MDP_full_info.R
Markov chain do nothing/: do nothing markov chain estimation.R
POMDP/: build_matrices_hmMDP.R  possible_models.R  read solutions.R  solving AM.R  solving tech dev.R
(+82795 files in other folders)
